# ws-to-kafka

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh
cmake/: FindNlohmannJson.cmake  FindRdKafka.cmake
src/: kafka_producer.cpp  kafka_producer.hpp  main.cpp  pch.h  uri.hpp  wsclient.cpp  wsclient.hpp
src/s3sink/: CMakeLists.txt  main.cpp  message_store.cpp  message_store.hpp
src/wssource/: CMakeLists.txt  interval_timer.hpp  kafka_producer.cpp  kafka_producer.hpp  main.cpp  wsclient.cpp  wsclient.hpp
